Compiler warnings as build failures